kubernetes/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: it-diagnostics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:10.1.2
        ports:
          - containerPort: 3000
        volumeMounts:
          # Mount the dashboard JSON ConfigMap
          - name: grafana-dashboard-configmap
            mountPath: /var/lib/grafana/dashboards

          # Mount the dashboard provider ConfigMap
          - name: grafana-dashboard-provider
            mountPath: /etc/grafana/provisioning/dashboards

          # Mount the datasources ConfigMap
          - name: datasources
            mountPath: /etc/grafana/provisioning/datasources

      volumes:
        - name: grafana-dashboard-configmap
          configMap:
            name: grafana-dashboard-configmap    # <--- Matches your file's "metadata.name"

        - name: grafana-dashboard-provider
          configMap:
            name: grafana-dashboard-provider

        - name: datasources
          configMap:
            name: datasources

---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: it-diagnostics
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /api/health
    alb.ingress.kubernetes.io/healthcheck-success-codes: "200,302"
spec:
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: 3000
      name: http
