kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: it-diagnostics-ingress
  namespace: it-diagnostics
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: "[{"HTTPS":443}]"
    alb.ingress.kubernetes.io/certificate-arn: "${aws_acm_certificate.selfsigned_acm.arn}"
    alb.ingress.kubernetes.io/healthcheck-success-codes: "200-399"
    
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 5000
          - path: /case
            pathType: Prefix
            backend:
              service:
                name: case-service
                port:
                  number: 5001
          - path: /diagnostic
            pathType: Prefix
            backend:
              service:
                name: diagnostic-service
                port:
                  number: 5002
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
